# hvega

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  cabal.project  default.nix  flake.nix  hie.yaml  shell.nix  stack.yaml
hvega/: CHANGELOG.md  README.md  TAGS  default.nix  flake.nix  hvega.cabal  hvega.nix  shell.nix  stack-8.10.yaml  stack-8.6.yaml  stack-8.8.yaml  stack-9.0.yaml  stack-9.2.yaml  stack-nightly.yaml  stack.yaml
hvega/data/: betelgeuse-2020-03-19.json  gaia-aa-616-a10-table1a.no-header.tsv
hvega/src/Graphics/Vega/: VegaLite.hs
hvega/tests/: AxisTests.hs  ColorTests.hs  CompositeTests.hs  ConditionalTests.hs  ConfigTests.hs  DataTests.hs  EncodingTests.hs  FillStrokeTests.hs  FilterTests.hs  GalleryAdvanced.hs  GeoTests.hs  HyperlinkTests.hs  ImageTests.hs  InteractionTests.hs  LegendTests.hs  MarkTests.hs  NullTests.hs  PositionTests.hs  ProjectionTests.hs  ScaleTests.hs  ShapeTests.hs  SortTests.hs  Test.hs  TextFormatTests.hs  TimeTests.hs  TooltipTests.hs  TrailTests.hs  TransformTests.hs  ViewCompositionTests.hs  WindowTransformTests.hs
hvega/tests/Gallery/: Advanced.hs  Area.hs  Bar.hs  Dist.hs  Error.hs  Facet.hs  Geo.hs  Histogram.hs  Interaction.hs  Label.hs  Layer.hs  Line.hs  Multi.hs  Repeat.hs  Scatter.hs  Table.hs
hvega/tests/color/: customContinuous.vl  customDiscrete.vl  defContinuous.vl  defOrdinal.vl  gamma3.vl  gamma5.vl  interp1.vl  interp3.vl  interp6.vl  namedContinuous3.vl  namedContinuous4.vl  scale1.vl  scale2.vl  scale3.vl  scale4.vl  scale6.vl
hvega/tests/composite/: boxplot1.vl  boxplot2.vl  boxplot3.vl  errorband2.vl  errorbar1.vl
hvega/tests/conditional/: bindScales1.vl  markCondition1.vl  selectionCondition1.vl  selectionCondition2.vl  selectionCondition3.vl  selectionCondition4.vl  selectionCondition5.vl
hvega/tests/config/: dark.vl  padding.vl  vbTest.vl
hvega/tests/data/: bin1.vl  data1.vl  data10.vl  data4.vl  data7.vl  data8.vl  data9.vl  filter1.vl  fold1.vl  geodata1.vl  geodata2.vl  impute1.vl  impute2.vl  impute4.vl  impute5.vl  impute6.vl  impute8.vl  namedData3.vl  sequence2.vl
hvega/tests/fillstroke/: combined1.vl  combined3.vl  default.vl  geo1.vl  geo2.vl  stroke2.vl  stroke3.vl
hvega/tests/gallery/advanced/: advanced2.vl  advanced3.vl  advanced5.vl  advanced6.vl  advanced8.vl
hvega/tests/gallery/area/: area4.vl
hvega/tests/geo/: choropleth1.vl  choropleth2.vl  defaultSize1.vl  dotMap1.vl  graticule1.vl  graticule2.vl  graticule3.vl  graticule4.vl  linear2.vl  linear3.vl  map1d.vl  mapComp2.vl  mapComp3.vl  mapComp4.vl  scale1.vl  scribbleMap1.vl  scribbleMap2.vl  translate1.vl
hvega/tests/hyperlink/: hyperlink1.vl  hyperlink3.vl
hvega/tests/legend/: legend10.vl  legend11.vl  legend2.vl  legend3.vl  legend4.vl  legend5.vl  legend6.vl  legend8.vl
hvega/tests/null/: axis1.vl  filter1.vl  filter2.vl  scale4.vl
hvega/tests/position/: position1.vl  position2.vl  position3.vl  position5.vl
hvega/tests/projection/: Albers.vl  AzimuthalEqualArea.vl  ConicEqualArea.vl  ConicEquidistant.vl  Gnomonic.vl  Identity.vl  Orthographic.vl  airy.vl  aitoff.vl  armadillo.vl  august.vl  baker.vl  berghaus.vl  bertin1953.vl  boggs.vl  bonne.vl  bottomley.vl  collignon.vl  configExample.vl  craig.vl  craster.vl  cylindricalequalarea.vl  cylindricalstereographic.vl  eckert1.vl  eckert2.vl  eckert3.vl  eckert4.vl  eckert5.vl  eckert6.vl  eisenlohr.vl  fahey.vl  foucaut.vl  gingery.vl  reflectXYExample.vl  reflectYExample.vl  winkel3.vl
hvega/tests/scale/: scale1.vl  scale3.vl  scale6.vl  scale8.vl  scale9.vl
hvega/tests/shape/: custom4.vl  defNominal.vl  isotype1.vl  multi1.vl  multi3.vl  multi4.vl  multi5.vl  size1.vl  size2.vl
hvega/tests/sort/: descending.vl  stack1.vl  weighted.vl
hvega/tests/specs/axis/: axis1.vl  axis1c.vl  axis2.vl  axis2c.vl  axis3.vl  axis3c.vl  axis4.vl  axis4c.vl  axis5.vl  axis5c.vl  axis6.vl  axis6c.vl  axis7.vl  axis7c.vl  axis8.vl  axis8c.vl  axisOverlapGreedy.vl  axisOverlapNone.vl  axisOverlapParity.vl  axisstyleempty.vl  axisstyleemptyx.vl  axisstylex.vl  axisstylexastyle.vl  axisstylexy.vl  multiline.vl  responsiveHeight.vl  responsiveWidth.vl  singleline.vl  zorder.vl
hvega/tests/specs/color/: customContinuous.vl  customDiscrete.vl  defContinuous.vl  defNominal.vl  defOrdinal.vl  gamma1.vl  gamma2.vl  gamma3.vl  gamma4.vl  gamma5.vl  interp1.vl  interp2.vl  interp3.vl  interp4.vl  interp5.vl  interp6.vl  interp7.vl  namedContinuous1.vl  namedContinuous2.vl  namedContinuous3.vl  namedContinuous4.vl  scale1.vl  scale3.vl  scale4.vl  scale5.vl  scale6.vl  scale7.vl  scale8.vl
hvega/tests/specs/composite/: boxplot1.vl  boxplot2.vl  boxplot3.vl  boxplotnobox.vl  boxplotnomedian.vl  boxplotnooutliers.vl  boxplotnorule.vl  boxplotnoticks.vl  errorband1.vl  errorband1no.vl  errorband2.vl  errorband2no.vl  errorbar1.vl  errorbar2.vl  errorbar3.vl  errorbar3no.vl  errorbar4.vl  errorbar5.vl  errorbar6.vl  errorbar7.vl
hvega/tests/specs/conditional/: axisCondition1.vl  axisCondition2.vl  axisCondition3.vl  axisDateCondition1.vl  axisconditionlabeloffset.vl  bindScales1.vl  bindScales2.vl  markCondition1.vl  markCondition2.vl  selectionCondition1.vl  selectionCondition2.vl  selectionCondition3.vl  selectionCondition4.vl  selectionCondition5.vl  selectionHeatMap.vl
hvega/tests/specs/config/: axisCfg1.vl  dark.vl  (+18 more)
hvega/tests/textformat/: textFormat1.vl  textFormat2.vl
hvega/tests/time/: localTime.vl  timeDay.vl  timeHoursMinutesSeconds.vl  timeMinutes.vl  timeMinutesSeconds.vl  timeMonth.vl  timeMonthDate.vl  timeQuarter.vl  timeQuarterMonth.vl  timeYearMonthDateHours.vl  utcTime.vl
hvega/tests/tooltip/: tooltip2.vl
hvega/tests/trail/: trail1.vl
hvega/tests/viewcomposition/: columns1.vl  columns3.vl  grid1.vl  grid2.vl  grid3.vl  grid4.vl  grid5.vl
hvega/tests/windowtransform/: joinAggregate3.vl  window2.vl  window4.vl  window6.vl  window7.vl
hvega/tools/: GetBetelgeuse.hs  PlayTutorial.hs  viewer.js
ihaskell-hvega/: CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  ihaskell-hvega.cabal  ihaskell-hvega.nix  shell.nix  stack.yaml
(+579 files in other folders)
