name:                hvega
version:             0.4.0.0
synopsis:            Create Vega-Lite visualizations (version 3) in Haskell.
description:         This is based on the elm-vegalite package
                     (<http://package.elm-lang.org/packages/gicentre/elm-vegalite/latest>)
                     by Jo Wood of the giCentre at the City University of London.
homepage:            https://github.com/DougBurke/hvega
bug-reports:         https://github.com/DougBurke/hvega/issues
license:             BSD3
license-file:        LICENSE
author:              Douglas Burke
maintainer:          dburke.gw@gmail.com
copyright:           2018-2019 Douglas Burke
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     stack.yaml
                     default.nix
                     shell.nix
                     hvega.nix
extra-doc-files:     images/example.png
                     images/intro.png
cabal-version:       >= 1.18

source-repository head
  type:     git
  location: https://github.com/DougBurke/hvega

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Vega.VegaLite
  build-depends:       base >= 4.9 && < 5
                     , aeson >= 0.11 && < 1.5
                     , text == 1.2.*
                     , unordered-containers == 0.2.*
                     , vector >= 0.11 && < 0.13
                     
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests/
  main-is:             Test.hs
  other-modules:       ColorTests
                       CompositeTests
                       ConditionalTests
                       ConfigTests
                       DataTests
                       FillStrokeTests
                       GeoTests
                       HyperlinkTests
                       LegendTests
                       NullTests
                       PositionTests
                       ProjectionTests
                       ScaleTests
                       ShapeTests
                       SortTests
                       TextFormatTests
                       TimeTests
                       TooltipTests
                       TrailTests
                       ViewCompositionTests
                       WindowTransformTests
                       GalleryAdvanced

  build-depends:       aeson >= 0.11 && < 1.5
                     , aeson-pretty == 0.8.*
                     , base >= 4 && < 5
                     , bytestring == 0.10.*
                     , containers >= 0.5.8 && < 0.7
                     , filepath
                     , tasty
                     , tasty-golden >= 2.2 && < 2.4
                     , text == 1.2.*
                     , hvega

  default-language:    Haskell2010
  ghc-options:         -Wall
