name:                hvega
version:             0.4.1.2
synopsis:            Create Vega-Lite visualizations (version 3) in Haskell.
description:         This is based on the elm-vegalite package
                     (<http://package.elm-lang.org/packages/gicentre/elm-vegalite/latest>)
                     by Jo Wood of the giCentre at the City University of London.
homepage:            https://github.com/DougBurke/hvega
bug-reports:         https://github.com/DougBurke/hvega/issues
license:             BSD3
license-file:        LICENSE
author:              Douglas Burke
maintainer:          dburke.gw@gmail.com
copyright:           2018-2019 Douglas Burke
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     stack.yaml
                     default.nix
                     shell.nix
                     hvega.nix
                     tests/specs/axis/*.vl
                     tests/specs/color/*.vl
                     tests/specs/composite/*.vl
                     tests/specs/conditional/*.vl
                     tests/specs/config/*.vl
                     tests/specs/data/*.vl
                     tests/specs/fillstroke/*.vl
                     tests/specs/geo/*.vl
                     tests/specs/hyperlink/*.vl
                     tests/specs/interaction/*.vl
                     tests/specs/legend/*.vl
                     tests/specs/null/*.vl
                     tests/specs/position/*.vl
                     tests/specs/projection/*.vl
                     tests/specs/scale/*.vl
                     tests/specs/shape/*.vl
                     tests/specs/sort/*.vl
                     tests/specs/textformat/*.vl
                     tests/specs/time/*.vl
                     tests/specs/tooltip/*.vl
                     tests/specs/trail/*.vl
                     tests/specs/viewcomposition/*.vl
                     tests/specs/windowtransform/*.vl
                     tests/specs/gallery/advanced/*.vl
                     tests/specs/gallery/area/*.vl
                     tests/specs/gallery/bar/*.vl
                     tests/specs/gallery/dist/*.vl
                     tests/specs/gallery/error/*.vl
                     tests/specs/gallery/facet/*.vl
                     tests/specs/gallery/geo/*.vl
                     tests/specs/gallery/interaction/*.vl
                     tests/specs/gallery/label/*.vl
                     tests/specs/gallery/layer/*.vl
                     tests/specs/gallery/line/*.vl
                     tests/specs/gallery/multi/*.vl
                     tests/specs/gallery/repeat/*.vl
                     tests/specs/gallery/scatter/*.vl
                     tests/specs/gallery/table/*.vl

extra-doc-files:     images/example.png
                     images/intro.png
                     images/zindex.png
                     images/vl/stripplot.png
                     images/vl/stripplotwithbackground.png
                     images/vl/stripploty.png
                     images/vl/stripplotwithcolor.png
                     images/vl/stripplotwithcolorordinal.png
                     images/vl/parallaxbreakdown.png
                     images/vl/parallaxhistogram.png
                     images/vl/gmaghistogram.png
                     images/vl/yloghistogram.png
                     images/vl/gmaghistogramwithcolor.png
                     images/vl/gmaglinewithcolor.png
                     images/vl/yhistogram.png
                     images/vl/pointplot.png
                     images/vl/posplot.png
                     images/vl/skyplot.png
                     images/vl/smallmultiples.png
                     images/vl/smallmultiples2.png
                     images/vl/baseplot.png
                     images/vl/layeredplot.png
                     images/vl/layereddiversion.png
                     images/vl/concatenatedplot.png
                     images/vl/concatenatedplot2.png
                     images/vl/repeatplot.png
                     images/vl/splomplot.png
                     images/vl/singleselection.png
                     images/vl/nearestselection.png
                     images/vl/multiselection.png
                     images/vl/eventselection.png
                     images/vl/intervalselection.png
                     images/vl/intervalselectiony.png
                     images/vl/transformselection.png
                     images/vl/widgetselection.png
                     images/vl/bindscales.png
                     images/vl/coordinatedviews.png
                     images/vl/coordinatedviews2.png
                     images/vl/contextandfocus.png
                     images/vl/crossfilter.png
                     images/vl/errormanual.png
                     images/vl/errormanual-zoomed.png
                     images/vl/errorauto.png
                     images/vl/errorbars.png
                     images/vl/errorband.png
                     images/vl/errorbox.png
                     images/vl/comparingerrors.png
                     images/vl/combinedplot.png
                     images/vl/combinedplot-selected.png

cabal-version:       1.18

source-repository head
  type:     git
  location: https://github.com/DougBurke/hvega

flag tools
  description: Build associated tools (in general you won't need this)
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Vega.VegaLite
                       Graphics.Vega.Tutorials.VegaLite
  build-depends:       base >= 4.9 && < 5
                     , aeson >= 0.11 && < 1.5
                     , text == 1.2.*
                     , unordered-containers == 0.2.*
                     , vector >= 0.11 && < 0.13
                     
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests/
  main-is:             Test.hs
  other-modules:       AxisTests
                       ColorTests
                       CompositeTests
                       ConditionalTests
                       ConfigTests
                       DataTests
                       FillStrokeTests
                       GeoTests
                       HyperlinkTests
                       InteractionTests
                       LegendTests
                       NullTests
                       PositionTests
                       ProjectionTests
                       ScaleTests
                       ShapeTests
                       SortTests
                       TextFormatTests
                       TimeTests
                       TooltipTests
                       TrailTests
                       ViewCompositionTests
                       WindowTransformTests
                       Gallery.Advanced
                       Gallery.Area
                       Gallery.Bar
                       Gallery.Dist
                       Gallery.Error
                       Gallery.Facet
                       Gallery.Geo
                       Gallery.Interaction
                       Gallery.Label
                       Gallery.Layer
                       Gallery.Line
                       Gallery.Multi
                       Gallery.Repeat
                       Gallery.Scatter
                       Gallery.Table

  build-depends:       aeson >= 0.11 && < 1.5
                     , aeson-pretty == 0.8.*
                     , base >= 4 && < 5
                     , bytestring == 0.10.*
                     , containers >= 0.5.7 && < 0.7
                     , filepath
                     , tasty
                     , tasty-golden >= 2.2 && < 2.4
                     , text == 1.2.*
                     , hvega

  default-language:    Haskell2010
  ghc-options:         -Wall


executable    playtutorial
  hs-source-dirs:      tools/
  main-is:             PlayTutorial.hs

  if flag(tools)
    build-depends:     aeson
                     , aeson-pretty == 0.8.*
                     , base
                     , bytestring
                     , directory
                     , filepath
                     , hvega
                     , text
  else
    buildable:         False

  default-language:    Haskell2010
  ghc-options:         -Wall
