name:                hvega
version:             0.12.0.3
synopsis:            Create Vega-Lite visualizations (version 4) in Haskell.
description:         This is based on the elm-vegalite package
                     (<http://package.elm-lang.org/packages/gicentre/elm-vegalite/latest>)
                     by Jo Wood of the giCentre at the City University of London.
homepage:            https://github.com/DougBurke/hvega
bug-reports:         https://github.com/DougBurke/hvega/issues
license:             BSD3
license-file:        LICENSE
author:              Douglas Burke
maintainer:          dburke.gw@gmail.com
copyright:           2018-2022 Douglas Burke
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     stack.yaml
                     default.nix
                     shell.nix
                     tests/specs/axis/*.vl
                     tests/specs/color/*.vl
                     tests/specs/composite/*.vl
                     tests/specs/conditional/*.vl
                     tests/specs/config/*.vl
                     tests/specs/data/*.vl
                     tests/specs/fillstroke/*.vl
                     tests/specs/geo/*.vl
                     tests/specs/hyperlink/*.vl
                     tests/specs/image/*.vl
                     tests/specs/interaction/*.vl
                     tests/specs/legend/*.vl
                     tests/specs/null/*.vl
                     tests/specs/position/*.vl
                     tests/specs/projection/*.vl
                     tests/specs/scale/*.vl
                     tests/specs/shape/*.vl
                     tests/specs/sort/*.vl
                     tests/specs/textformat/*.vl
                     tests/specs/time/*.vl
                     tests/specs/tooltip/*.vl
                     tests/specs/trail/*.vl
                     tests/specs/viewcomposition/*.vl
                     tests/specs/windowtransform/*.vl
                     tests/specs/gallery/advanced/*.vl
                     tests/specs/gallery/area/*.vl
                     tests/specs/gallery/bar/*.vl
                     tests/specs/gallery/dist/*.vl
                     tests/specs/gallery/error/*.vl
                     tests/specs/gallery/facet/*.vl
                     tests/specs/gallery/geo/*.vl
                     tests/specs/gallery/histogram/*.vl
                     tests/specs/gallery/interaction/*.vl
                     tests/specs/gallery/label/*.vl
                     tests/specs/gallery/layer/*.vl
                     tests/specs/gallery/line/*.vl
                     tests/specs/gallery/multi/*.vl
                     tests/specs/gallery/repeat/*.vl
                     tests/specs/gallery/scatter/*.vl
                     tests/specs/gallery/table/*.vl

extra-doc-files:     images/example-car.png
                     images/example-betelgeuse.png
                     images/zindex.png
                     images/vl/stripplot.png
                     images/vl/stripplotwithbackground.png
                     images/vl/stripploty.png
                     images/vl/stripplotwithcolor.png
                     images/vl/stripplotwithcolorordinal.png
                     images/vl/piechart.png
                     images/vl/piechartwithcounting.png
                     images/vl/parallaxbreakdown.png
                     images/vl/parallaxhistogram.png
                     images/vl/gmaghistogram.png
                     images/vl/yloghistogram.png
                     images/vl/gmaghistogramwithcolor.png
                     images/vl/gmaglinewithcolor.png
                     images/vl/yhistogram.png
                     images/vl/starcount.png
                     images/vl/starcount2.png
                     images/vl/densityparallax.png
                     images/vl/densityparallaxgrouped.png
                     images/vl/pointplot.png
                     images/vl/posplot.png
                     images/vl/skyplot.png
                     images/vl/smallmultiples.png
                     images/vl/smallmultiples2.png
                     images/vl/densitymultiples.png
                     images/vl/baseplot.png
                     images/vl/layeredplot.png
                     images/vl/layereddiversion.png
                     images/vl/layeredcount.png
                     images/vl/skyplotwithgraticules.png
                     images/vl/concatenatedplot.png
                     images/vl/concatenatedplot2.png
                     images/vl/concatenatedskyplot.png
                     images/vl/repeatplot.png
                     images/vl/splomplot.png
                     images/vl/choroplethlookuptogeo.png
                     images/vl/choroplethlookupfromgeo.png
                     images/vl/singleselection.png
                     images/vl/nearestselection.png
                     images/vl/multiselection.png
                     images/vl/eventselection.png
                     images/vl/intervalselection.png
                     images/vl/intervalselectiony.png
                     images/vl/transformselection.png
                     images/vl/legendselection.png
                     images/vl/widgetselection.png
                     images/vl/bindscales.png
                     images/vl/coordinatedviews.png
                     images/vl/coordinatedviews2.png
                     images/vl/contextandfocus.png
                     images/vl/crossfilter.png
                     images/vl/loessexample.png
                     images/vl/regressionexample.png
                     images/vl/errormanual.png
                     images/vl/errormanual-zoomed.png
                     images/vl/errorauto.png
                     images/vl/errorbars.png
                     images/vl/errorband.png
                     images/vl/errorbox.png
                     images/vl/comparingerrors.png
                     images/vl/combinedplot.png
                     images/vl/combinedplot-selected.png
                     images/vl/duplicateaxis.png
                     images/vl/comparecounts.png
                     images/vl/parallaxview.png
                     images/vl/parallaxview-selected.png
                     images/vl/skyplotaitoff.png
                     images/vl/clustercenters.png

cabal-version:       1.18

source-repository head
  type:     git
  location: https://github.com/DougBurke/hvega

flag tools
  description: Build associated tools (in general you won't need this)
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Vega.VegaLite
                       Graphics.Vega.Tutorials.VegaLite
  other-modules:       Graphics.Vega.VegaLite.Configuration
                       Graphics.Vega.VegaLite.Core
                       Graphics.Vega.VegaLite.Data
                       Graphics.Vega.VegaLite.Foundation
                       Graphics.Vega.VegaLite.Geometry
                       Graphics.Vega.VegaLite.Input
                       Graphics.Vega.VegaLite.Legend
                       Graphics.Vega.VegaLite.Mark
                       Graphics.Vega.VegaLite.Output
                       Graphics.Vega.VegaLite.Scale
                       Graphics.Vega.VegaLite.Selection
                       Graphics.Vega.VegaLite.Specification
                       Graphics.Vega.VegaLite.Time
                       Graphics.Vega.VegaLite.Transform
  build-depends:       base >= 4.9 && < 5
                     , aeson >= 0.11 && < 2.2
                     , text >= 1.2 && < 2.1
                     , unordered-containers == 0.2.*

  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests/
  main-is:             Test.hs
  other-modules:       AxisTests
                       ColorTests
                       CompositeTests
                       ConditionalTests
                       ConfigTests
                       DataTests
                       EncodingTests
                       FillStrokeTests
                       FilterTests
                       GeoTests
                       HyperlinkTests
                       ImageTests
                       InteractionTests
                       LegendTests
                       MarkTests
                       NullTests
                       PositionTests
                       ProjectionTests
                       ScaleTests
                       ShapeTests
                       SortTests
                       TextFormatTests
                       TimeTests
                       TooltipTests
                       TrailTests
                       TransformTests
                       ViewCompositionTests
                       WindowTransformTests
                       Gallery.Advanced
                       Gallery.Area
                       Gallery.Bar
                       Gallery.Dist
                       Gallery.Error
                       Gallery.Facet
                       Gallery.Geo
                       Gallery.Histogram
                       Gallery.Interaction
                       Gallery.Label
                       Gallery.Layer
                       Gallery.Line
                       Gallery.Multi
                       Gallery.Repeat
                       Gallery.Scatter
                       Gallery.Table

  build-depends:       aeson >= 1.4.2 && < 2.2
                     , aeson-pretty == 0.8.*
                     , base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.12
                     , containers >= 0.5.7 && < 0.7
                     , filepath
                     , tasty
                     , tasty-golden >= 2.2 && < 2.4
                     , text
                     , unordered-containers >= 0.2 && < 0.3
                     -- hvega is not needed with recent cabal's, but it's
                     -- not obvious if this is true with older versions
                     , hvega

  default-language:    Haskell2010
  ghc-options:         -Wall


executable    playtutorial
  hs-source-dirs:      tools/
  main-is:             PlayTutorial.hs

  if flag(tools)
    build-depends:     aeson
                     , aeson-pretty == 0.8.*
                     , base
                     , bytestring
                     , directory
                     , filepath
                     -- hvega is not needed with recent cabal's, but it's
                     -- not obvious if this is true with older versions
                     , hvega
                     , text
  else
    buildable:         False

  default-language:    Haskell2010
  ghc-options:         -Wall

  
executable    getbetelgeuse
  hs-source-dirs:      tools/
  main-is:             GetBetelgeuse.hs

  if flag(tools)
    build-depends:     aeson
                     , base
                     , bytestring
                     , http-conduit >= 2.3 && < 2.4
                     , tagsoup >= 0.14 && < 0.15
                     , text
  else
    buildable:         False

  default-language:    Haskell2010
  ghc-options:         -Wall
