name:                ihaskell-hvega
version:             0.2.1.0
synopsis:            IHaskell display instance for hvega types.
description:         Support Vega-Lite visualizations in IHaskell notebooks.
homepage:            https://github.com/DougBurke/hvega
bug-reports:         https://github.com/DougBurke/hvega/issues
license:             BSD3
license-file:        LICENSE
author:              Douglas Burke
maintainer:          dburke.gw@gmail.com
copyright:           2018, 2019 Douglas Burke
category:            Development
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     stack.yaml
                     default.nix
cabal-version:       1.18

library
  hs-source-dirs:      src
  exposed-modules:     IHaskell.Display.Hvega
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.11 && < 1.5
                     , hvega < 0.5
                     , ihaskell >= 0.9.1 && < 0.11
                     , text == 1.2.*
                     
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: https://github.com/DougBurke/hvega
